2003-09-23  Andrew Lunn  <andrew.lunn@ascom.ch>

        * src/httpd.c (cyg_httpd_server): Removed unused variable.
        * doc/httpd.sgml: Updated documentation for previous change.

2003-09-22  Eric Doenges  <Eric.Doenges@DynaPel.com>
	
        * include/httpd.h: changed prototype of cyg_httpd_send_html and
        cyg_httpd_send_data to match implementation.

2003-06-09  Nick Garnett  <nickg@balti.calivar.com>

	* src/httpd.c: Fixed a problem with closing the client socket --
	it was being done twice.
	Tidied up the formatting a little.

	* src/monitor.c: Fixed some compiler warnings.

2003-05-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/monitor.c (cyg_monitor_network): Added IPv6 information to
	the display of network information.
	* tests/httpd1.c: New file: Simple program to actually run the 
	server so we can test it.
	* cdl/httpd.cdl: Added the test program.

2003-05-10  Andrew Lunn   <andrew.lunn@ascom,ch>

	* src/httpd.c: Added support for serving content over IPv6,
	* doc/httpd.sgml: Added comment about IPv6.

2003-04-23  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>

	* cdl/httpd.cdl: Only build monitor in CDL option.

2003-03-17  Nick Garnett  <nickg@balti.calivar.com>

	* src/monitor.c (cyg_monitor_network): Added monitoring of Mbufs
	to network page.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/httpd.cdl: Add doc link.

2003-02-14  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>

	* include/httpd.h (html_end): fix typo.

2002-12-06  Nick Garnett  <nickg@ecoscentric.com>

	* include/httpd.h: 
	* src/init.cxx: 
	* src/httpd.c: 
	* src/monitor.c: 
	* doc/httpd.sgml: 
	* cdl/httpd.cdl: 
	Created HTTPD package.
	
# Copyright (C) 2002 Nick Garnett
# All Rights Reserved.
#
# Permission is granted to use, copy, modify and redistribute this
# file.
		